rbk: loop link - first final commit

--- a/rbk/news.html
+++ b/rbk/news.html
@@ -36,7 +36,7 @@
     <div class="container-fluid">
       <div class="row middle-xs">
         <div class="col-xs-9 col-sm-5 col-md-3">
-          <div class="rbk-header__logo">
+          <a href="index.html" class="rbk-header__logo">
             <i class="rbk-header__logo-mobile puzzle-icon" style="width: 186px; height: 47px;">
               <svg width="186" height="47" viewBox="0 0 186 47" xmlns="http://www.w3.org/2000/svg">
                 <g fill="none" fill-rule="evenodd">
@@ -63,7 +63,7 @@
                 </g>
               </svg>
             </i>
-          </div>
+          </a>
         </div>
         <div class="col-xs-3 col-sm-7 col-md-8 col-md-offset-1 puzzle_ta_right">
           <div class="rbk-header__menu puzzle_va_middle">
@@ -77,25 +77,25 @@
               </i>
             </div>
             <div class="rbk-header__menu-list">
-               <a href="javascript:void(0)" class="rbk-header__menu-item">
+               <a href="projects.html" class="rbk-header__menu-item">
                  Проекты
                </a>
-               <a href="javascript:void(0)" class="rbk-header__menu-item is-active">
+               <a href="about_company.html" class="rbk-header__menu-item">
                  О компании
                </a>
                <a href="javascript:void(0)" class="rbk-header__menu-item">
                  Услуги
                </a>
-               <a href="javascript:void(0)" class="rbk-header__menu-item">
+               <a href="news.html" class="rbk-header__menu-item is-active">
                  Новости
                </a>
-               <a href="javascript:void(0)" class="rbk-header__menu-item">
+               <a href="team.html" class="rbk-header__menu-item">
                  Команда
                </a>
-               <a href="javascript:void(0)" class="rbk-header__menu-item">
+               <a href="#partners" class="rbk-header__menu-item">
                  Партнеры
                </a>
-               <a href="javascript:void(0)" class="rbk-header__menu-item">
+               <a href="#contacns" class="rbk-header__menu-item">
                 Контакты 
               </a>
                <div class="rbk-header__menu-item is-search">
@@ -142,7 +142,7 @@
                 <img src="assets/img/temp/6.jpg" alt="">
               </div>
               <div class="rbk-projects__slider-item-title">
-                <a href="javascript:void(0)">Завершен проект строительства завода</a>
+                <a href="news-item.html">Завершен проект строительства завода</a>
               </div>
               <div class="rbk-projects__slider-item-city">
                 Новое химическое производство в Ленинградской обл.
@@ -156,7 +156,7 @@
                 <img src="assets/img/temp/6.jpg" alt="">
               </div>
               <div class="rbk-projects__slider-item-title">
-                <a href="javascript:void(0)">Завершен проект строительства завода</a>
+                <a href="news-item.html">Завершен проект строительства завода</a>
               </div>
               <div class="rbk-projects__slider-item-city">
                 Новое химическое производство в Ленинградской обл.
@@ -170,7 +170,7 @@
                 <img src="assets/img/temp/6.jpg" alt="">
               </div>
               <div class="rbk-projects__slider-item-title">
-                <a href="javascript:void(0)">Завершен проект строительства завода</a>
+                <a href="news-item.html">Завершен проект строительства завода</a>
               </div>
               <div class="rbk-projects__slider-item-city">
                 Новое химическое производство в Ленинградской обл.
@@ -184,7 +184,7 @@
                 <img src="assets/img/temp/6.jpg" alt="">
               </div>
               <div class="rbk-projects__slider-item-title">
-                <a href="javascript:void(0)">Завершен проект строительства завода</a>
+                <a href="news-item.html">Завершен проект строительства завода</a>
               </div>
               <div class="rbk-projects__slider-item-city">
                 Новое химическое производство в Ленинградской обл.
@@ -198,7 +198,7 @@
                 <img src="assets/img/temp/6.jpg" alt="">
               </div>
               <div class="rbk-projects__slider-item-title">
-                <a href="javascript:void(0)">Завершен проект строительства завода</a>
+                <a href="news-item.html">Завершен проект строительства завода</a>
               </div>
               <div class="rbk-projects__slider-item-city">
                 Новое химическое производство в Ленинградской обл.
