rbk: mini fixes from Olya

--- a/rbk/projects.html
+++ b/rbk/projects.html
@@ -83,7 +83,7 @@
                <a href="about_company.html" class="rbk-header__menu-item">
                  О компании
                </a>
-               <a href="javascript:void(0)" class="rbk-header__menu-item">
+               <a href="news-item.html" class="rbk-header__menu-item">
                  Услуги
                </a>
                <a href="news.html" class="rbk-header__menu-item">
@@ -95,7 +95,7 @@
                <a href="#partners" class="rbk-header__menu-item">
                  Партнеры
                </a>
-               <a href="#contacns" class="rbk-header__menu-item">
+               <a href="#contacts" class="rbk-header__menu-item">
                 Контакты 
               </a>
                <div class="rbk-header__menu-item is-search">
@@ -161,9 +161,9 @@
                   <div class="rbk-projects__slider-item-pic">
                     <img src="assets/img/temp/4.png" alt="">
                   </div>
-                  <div class="rbk-projects__slider-item-title">
+                  <a href="gallery.html" class="rbk-projects__slider-item-title">
                     Жилой комплекс «Столичный»
-                  </div>
+                  </a>
                   <div class="rbk-projects__slider-item-city">
                     г. Сочи
                   </div>
@@ -172,9 +172,9 @@
                   <div class="rbk-projects__slider-item-pic">
                     <img src="assets/img/temp/5.png" alt="">
                   </div>
-                  <div class="rbk-projects__slider-item-title">
+                  <a href="gallery.html" class="rbk-projects__slider-item-title">
                     Автосалон Ягуар
-                  </div>
+                  </a>
                   <div class="rbk-projects__slider-item-city">
                    г. Москва
                  </div>
@@ -183,9 +183,9 @@
                 <div class="rbk-projects__slider-item-pic">
                   <img src="assets/img/temp/krono2.jpg" alt="">
                 </div>
-                <div class="rbk-projects__slider-item-title">
+                <a href="gallery.html" class="rbk-projects__slider-item-title">
                   Завод Кроношпан
-                </div>
+                </a>
                 <div class="rbk-projects__slider-item-city">
                   г. Егорьевск, Московская область
                 </div>
@@ -194,9 +194,9 @@
                 <div class="rbk-projects__slider-item-pic">
                   <img src="assets/img/temp/4.png" alt="">
                 </div>
-                <div class="rbk-projects__slider-item-title">
+                <a href="gallery.html" class="rbk-projects__slider-item-title">
                   Жилой комплекс «Столичный»
-                </div>
+                </a>
                 <div class="rbk-projects__slider-item-city">
                   г. Сочи
                 </div>
@@ -205,9 +205,9 @@
                 <div class="rbk-projects__slider-item-pic">
                   <img src="assets/img/temp/5.png" alt="">
                 </div>
-                <div class="rbk-projects__slider-item-title">
+                <a href="gallery.html" class="rbk-projects__slider-item-title">
                   Автосалон Ягуар
-                </div>
+                </a>
                 <div class="rbk-projects__slider-item-city">
                  г. Москва
                </div>
@@ -216,9 +216,9 @@
               <div class="rbk-projects__slider-item-pic">
                 <img src="assets/img/temp/krono2.jpg" alt="">
               </div>
-              <div class="rbk-projects__slider-item-title">
+              <a href="gallery.html" class="rbk-projects__slider-item-title">
                 Завод Кроношпан
-              </div>
+              </a>
               <div class="rbk-projects__slider-item-city">
                 г. Егорьевск, Московская область
               </div>
@@ -228,9 +228,9 @@
               <div class="rbk-projects__slider-item-pic">
                 <img src="assets/img/temp/4.png" alt="">
               </div>
-              <div class="rbk-projects__slider-item-title">
+              <a href="gallery.html" class="rbk-projects__slider-item-title">
                 Жилой комплекс «Столичный»
-              </div>
+              </a>
               <div class="rbk-projects__slider-item-city">
                 г. Сочи
               </div>
@@ -239,9 +239,9 @@
               <div class="rbk-projects__slider-item-pic">
                 <img src="assets/img/temp/5.png" alt="">
               </div>
-              <div class="rbk-projects__slider-item-title">
+              <a href="gallery.html" class="rbk-projects__slider-item-title">
                 Автосалон Ягуар
-              </div>
+              </a>
               <div class="rbk-projects__slider-item-city">
                г. Москва
              </div>
@@ -250,9 +250,9 @@
             <div class="rbk-projects__slider-item-pic">
               <img src="assets/img/temp/krono2.jpg" alt="">
             </div>
-            <div class="rbk-projects__slider-item-title">
+            <a href="gallery.html" class="rbk-projects__slider-item-title">
               Завод Кроношпан
-            </div>
+            </a>
             <div class="rbk-projects__slider-item-city">
               г. Егорьевск, Московская область
             </div>
@@ -261,9 +261,9 @@
             <div class="rbk-projects__slider-item-pic">
               <img src="assets/img/temp/4.png" alt="">
             </div>
-            <div class="rbk-projects__slider-item-title">
+            <a href="gallery.html" class="rbk-projects__slider-item-title">
               Жилой комплекс «Столичный»
-            </div>
+            </a>
             <div class="rbk-projects__slider-item-city">
               г. Сочи
             </div>
@@ -272,9 +272,9 @@
             <div class="rbk-projects__slider-item-pic">
               <img src="assets/img/temp/5.png" alt="">
             </div>
-            <div class="rbk-projects__slider-item-title">
+            <a href="gallery.html" class="rbk-projects__slider-item-title">
               Автосалон Ягуар
-            </div>
+            </a>
             <div class="rbk-projects__slider-item-city">
              г. Москва
            </div>
@@ -283,9 +283,9 @@
           <div class="rbk-projects__slider-item-pic">
             <img src="assets/img/temp/krono2.jpg" alt="">
           </div>
-          <div class="rbk-projects__slider-item-title">
+          <a href="gallery.html" class="rbk-projects__slider-item-title">
             Завод Кроношпан
-          </div>
+          </a>
           <div class="rbk-projects__slider-item-city">
             г. Егорьевск, Московская область
           </div>
@@ -296,6 +296,16 @@
           <div class="rbk-projects__slider-paginator">
           </div>
         </div>
+      </div>
+      <div class="rbk-paginator puzzle_ta_center">
+        <div class="rbk-paginator__item rbk-paginator__item-arrow rbk-paginator__item-left"><</div>
+        <div class="rbk-paginator__item rbk-paginator__item-num is-active">1</div>
+        <div class="rbk-paginator__item rbk-paginator__item-num">2</div>
+        <div class="rbk-paginator__item rbk-paginator__item-num">3</div>
+        <div class="rbk-paginator__item rbk-paginator__item-more">...</div>
+        <div class="rbk-paginator__item rbk-paginator__item-num">99</div>
+        <div class="rbk-paginator__item rbk-paginator__item-num">100</div>
+        <div class="rbk-paginator__item rbk-paginator__item-arrow rbk-paginator__item-right">></div>
       </div>
     </div>
   </div>
