--- a/rbk/team.html
+++ b/rbk/team.html
@@ -83,7 +83,7 @@
                <a href="about_company.html" class="rbk-header__menu-item">
                  О компании
                </a>
-               <a href="javascript:void(0)" class="rbk-header__menu-item">
+               <a href="news-item.html" class="rbk-header__menu-item">
                  Услуги
                </a>
                <a href="news.html" class="rbk-header__menu-item">
@@ -95,7 +95,7 @@
                <a href="#partners" class="rbk-header__menu-item">
                  Партнеры
                </a>
-               <a href="#contacns" class="rbk-header__menu-item">
+               <a href="#contacts" class="rbk-header__menu-item">
                 Контакты 
               </a>
                <div class="rbk-header__menu-item is-search">
