--- a/rbk/gallery.html
+++ b/rbk/gallery.html
@@ -84,7 +84,7 @@
                <a href="javascript:void(0)" class="rbk-header__menu-item is-active">
                  О компании
                </a>
-               <a href="javascript:void(0)" class="rbk-header__menu-item">
+               <a href="news-item.html" class="rbk-header__menu-item">
                  Услуги
                </a>
                <a href="javascript:void(0)" class="rbk-header__menu-item">
@@ -150,6 +150,36 @@
         <div class="rbk-gallery__item">
           <a href="assets/img/temp/3.jpg" data-lightbox="rbkGallery1">
             <img src="assets/img/temp/3.jpg" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="col-xs-3">
+        <div class="rbk-gallery__item">
+          <a href="assets/img/temp/krono2.jpg" data-lightbox="rbkGallery1">
+            <img src="assets/img/temp/krono2.jpg" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-3">
+        <div class="rbk-gallery__item">
+          <a href="assets/img/temp/3.jpg" data-lightbox="rbkGallery1">
+            <img src="assets/img/temp/3.jpg" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="col-xs-3">
+        <div class="rbk-gallery__item">
+          <a href="assets/img/temp/2.jpg" data-lightbox="rbkGallery1">
+            <img src="assets/img/temp/2.jpg" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="col-xs-3">
+        <div class="rbk-gallery__item">
+          <a href="assets/img/temp/1.jpg" data-lightbox="rbkGallery1">
+            <img src="assets/img/temp/1.jpg" alt="">
           </a>
         </div>
       </div>
