--- a/rbk/news-item.html
+++ b/rbk/news-item.html
@@ -84,10 +84,10 @@
                <a href="about_company.html" class="rbk-header__menu-item">
                  О компании
                </a>
-               <a href="javascript:void(0)" class="rbk-header__menu-item">
+               <a href="javascript:void(0)" class="rbk-header__menu-item is-active">
                  Услуги
                </a>
-               <a href="news.html" class="rbk-header__menu-item is-active">
+               <a href="news.html" class="rbk-header__menu-item">
                  Новости
                </a>
                <a href="team.html" class="rbk-header__menu-item">
@@ -96,7 +96,7 @@
                <a href="#partners" class="rbk-header__menu-item">
                  Партнеры
                </a>
-               <a href="#contacns" class="rbk-header__menu-item">
+               <a href="#contacts" class="rbk-header__menu-item">
                 Контакты 
               </a>
                <div class="rbk-header__menu-item is-search">
