rbk: image replace and text edit

--- a/rbk/about_company.html
+++ b/rbk/about_company.html
@@ -142,7 +142,7 @@
           История
         </h4>
         <p class="rbk-about__text">
-          После слияния компаний в 2011 году DERUS-ALLIANZ получила не только высококачественное оборудование и персонал с опытом работы на объектах различной сложности, но и европейский подход к процессу управления проектами.
+          После слияния компаний РБК СтройИнвест получила не только высококачественное оборудование и персонал с опытом работы на объектах различной сложности, но и европейский подход к процессу управления проектами.
         </p>
       </div>
       <div class="col-xs-12 col-sm-6">
@@ -156,7 +156,7 @@
             </div>
             <div class="rbk-about__management-person-info puzzle_va_middle">
               <div class="rbk-about__management-person-name">
-                Латуш Антон Сергеевич
+                Антон Сергеевич
               </div>
               <div class="rbk-about__management-person-post">
                 Генеральный директор
