--- a/rbk/index.html
+++ b/rbk/index.html
@@ -334,7 +334,7 @@
       </div>
       <div class="rbk-benefits__footer">
         <div class="rbk-benefits__footer-text">
-          После слияния компаний в 2011 году DERUS-ALLIANZ получила не только высококачественное оборудование и персонал с опытом работы на объектах различной сложности , но и европейский подход к процессу управления проектами.
+          После слияния компаний РБК СтройИнвест получила не только высококачественное оборудование и персонал с опытом работы на объектах различной сложности , но и европейский подход к процессу управления проектами.
         </div>
       </div>
     </div>
@@ -541,7 +541,7 @@
 <section class="rbk-slogan">
   <div class="container-fluid puzzle_ta_center">
     <div class="rbk-slogan__text">
-      DeRus Allianz — не только профессионально управляет стоительными проектами различной сложности. Мы обладаем собственной русурсной и материальной базой для реализации большей части общестроительных работ собственными силами, что позволяет гарантировать высокое качество строительства каждого объекта. 
+      РБК СтройИнвест — не только профессионально управляет стоительными проектами различной сложности. Мы обладаем собственной русурсной и материальной базой для реализации большей части общестроительных работ собственными силами, что позволяет гарантировать высокое качество строительства каждого объекта. 
     </div>
   </div>
 </section>
