--- a/rbk/team.html
+++ b/rbk/team.html
@@ -137,7 +137,7 @@
             <img src="assets/img/temp/avatar.png" alt="">
           </div>
           <div class="rbk-team__person-name">
-            Антон Латуш
+            Антон Сергеевич
           </div>
           <div class="rbk-team__person-post">
             Генеральный директор
@@ -356,7 +356,7 @@
               </div>
               <div class="rbk-team__modal-info puzzle_va_top">
                 <div class="rbk-team__modal-name">
-                  Антон Латуш
+                  Антон Сергеевич
                 </div>
                 <div class="rbk-team__modal-skills">
                   <div class="rbk-team__modal-skill">
