rbk: projects filter

--- a/rbk/projects.html
+++ b/rbk/projects.html
@@ -139,13 +139,13 @@
         </i>
       </div>
       <div class="rbk-submenu__list">
-        <div class="rbk-submenu-item is-active">
+        <div class="rbk-submenu-item rbk-submenu-item_js_click" data-type="1">
           Коммерческая недвижимость
         </div>
-        <div class="rbk-submenu-item">
+        <div class="rbk-submenu-item rbk-submenu-item_js_click" data-type="2">
           Индустриальная недвижимость
         </div>
-        <div class="rbk-submenu-item">
+        <div class="rbk-submenu-item rbk-submenu-item_js_click rbk-submenu-item_js_all is-active" data-type="all">
           Все проекты
         </div>
       </div>
@@ -157,7 +157,7 @@
           <div class="rbk-projects__slider-content">
             <div class="rbk-projects__slider-frame" id="onlyMobileSlider">
               <div class="rbk-projects__slider-list rbk-projects__slider-slidee">
-                <div class="rbk-projects__slider-item">
+                <div class="rbk-projects__slider-item" data-type="1">
                   <div class="rbk-projects__slider-item-pic">
                     <img src="assets/img/temp/4.png" alt="">
                   </div>
@@ -168,7 +168,7 @@
                     г. Сочи
                   </div>
                 </div>
-                <div class="rbk-projects__slider-item">
+                <div class="rbk-projects__slider-item" data-type="2">
                   <div class="rbk-projects__slider-item-pic">
                     <img src="assets/img/temp/5.png" alt="">
                   </div>
@@ -179,7 +179,7 @@
                    г. Москва
                  </div>
                </div>
-               <div class="rbk-projects__slider-item">
+               <div class="rbk-projects__slider-item" data-type="1">
                 <div class="rbk-projects__slider-item-pic">
                   <img src="assets/img/temp/krono2.jpg" alt="">
                 </div>
@@ -190,7 +190,7 @@
                   г. Егорьевск, Московская область
                 </div>
               </div>
-              <div class="rbk-projects__slider-item">
+              <div class="rbk-projects__slider-item" data-type="1">
                 <div class="rbk-projects__slider-item-pic">
                   <img src="assets/img/temp/4.png" alt="">
                 </div>
@@ -201,7 +201,7 @@
                   г. Сочи
                 </div>
               </div>
-              <div class="rbk-projects__slider-item">
+              <div class="rbk-projects__slider-item" data-type="2">
                 <div class="rbk-projects__slider-item-pic">
                   <img src="assets/img/temp/5.png" alt="">
                 </div>
@@ -212,7 +212,7 @@
                  г. Москва
                </div>
              </div>
-             <div class="rbk-projects__slider-item">
+             <div class="rbk-projects__slider-item" data-type="1">
               <div class="rbk-projects__slider-item-pic">
                 <img src="assets/img/temp/krono2.jpg" alt="">
               </div>
@@ -224,7 +224,7 @@
               </div>
             </div>
 
-            <div class="rbk-projects__slider-item">
+            <div class="rbk-projects__slider-item" data-type="1">
               <div class="rbk-projects__slider-item-pic">
                 <img src="assets/img/temp/4.png" alt="">
               </div>
@@ -235,7 +235,7 @@
                 г. Сочи
               </div>
             </div>
-            <div class="rbk-projects__slider-item">
+            <div class="rbk-projects__slider-item" data-type="2">
               <div class="rbk-projects__slider-item-pic">
                 <img src="assets/img/temp/5.png" alt="">
               </div>
@@ -246,7 +246,7 @@
                г. Москва
              </div>
            </div>
-           <div class="rbk-projects__slider-item">
+           <div class="rbk-projects__slider-item" data-type="1">
             <div class="rbk-projects__slider-item-pic">
               <img src="assets/img/temp/krono2.jpg" alt="">
             </div>
@@ -257,7 +257,7 @@
               г. Егорьевск, Московская область
             </div>
           </div>
-          <div class="rbk-projects__slider-item">
+          <div class="rbk-projects__slider-item" data-type="1">
             <div class="rbk-projects__slider-item-pic">
               <img src="assets/img/temp/4.png" alt="">
             </div>
@@ -268,7 +268,7 @@
               г. Сочи
             </div>
           </div>
-          <div class="rbk-projects__slider-item">
+          <div class="rbk-projects__slider-item" data-type="2">
             <div class="rbk-projects__slider-item-pic">
               <img src="assets/img/temp/5.png" alt="">
             </div>
@@ -279,7 +279,7 @@
              г. Москва
            </div>
          </div>
-         <div class="rbk-projects__slider-item">
+         <div class="rbk-projects__slider-item" data-type="1">
           <div class="rbk-projects__slider-item-pic">
             <img src="assets/img/temp/krono2.jpg" alt="">
           </div>
