rbk: search full page

--- a/rbk/search.html
+++ b/rbk/search.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
-  <title>Контакты РБК Строй Инвест</title>
+  <title>Поиск РБК Строй Инвест</title>
   <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="assets/css/lightbox.css">
   <link rel="stylesheet" href="assets/css/screen.css">
@@ -128,83 +128,68 @@
 <div class="page-wrapper">
   <section class="rbk-subheader">
     <h1 class="rbk-subheader__title">
-      Контакты
+      Поиск
     </h1>
   </section>
-  <section class="rbk-contacts-page">
+  <section class="rbk-search-page">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-xs-12 col-sm-6">
-          <form action="" class="rbk-feedback-form">
-            <div class="rbk-feedback-form__title">
-              Напишите нам
-            </div>
-            <div class="rbk-feedback-form__item">
-              <label for="rbkFeedbackName" class="rbk-feedback-form__label">
-                <div class="rbk-feedback-form__item-title">
-                  Имя
-                </div>
-                <input id="rbkFeedbackName" type="text" placeholder="" class="rbk-feedback-form__input rbk-input">
-              </label>
-            </div>
-            <div class="rbk-feedback-form__item">
-              <label for="rbkFeedbackEmail" class="rbk-feedback-form__label">
-                <div class="rbk-feedback-form__item-title">
-                  E-mail
-                </div>
-                <input id="rbkFeedbackEmail" type="email" placeholder="" class="rbk-feedback-form__input rbk-input">
-              </label>
-            </div>
-            <div class="rbk-feedback-form__item">
-              <label for="rbkFeedbackTel" class="rbk-feedback-form__label">
-                <div class="rbk-feedback-form__item-title">
-                  Телефон
-                </div>
-                <input id="rbkFeedbackTel" type="tel" placeholder="" class="rbk-feedback-form__input rbk-input">
-              </label>
-            </div>
-            <div class="rbk-feedback-form__item">
-              <label for="rbkFeedbackMessage" class="rbk-feedback-form__label">
-                <div class="rbk-feedback-form__item-title">
-                  Сообщение
-                </div>
-                <textarea name="" id="rbkFeedbackMessage" cols="30" rows="9" class="rbk-feedback-form__textarea rbk-input"></textarea>
-              </label>
-            </div>
-            <div class="rbk-feedback-form__item">
-              <button type="submit" class="more-button more-button_size_m more-button_style_gray">
-                Отправить
-              </button>
-            </div>
-          </form>
-        </div>
-        <div class="col-xs-12 col-sm-6">
-          <div class="rbk-contacts-page__address">
-            <div class="rbk-feedback-form__title">
-              Наш адрес
-            </div>
-            <div class="rbk-footer__address" itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress">
-              <div class="rbk-footer__address-title rbk-footer__address-row">
-                Адрес:
-              </div>
-              <div class="rbk-footer__address-row">
-                123007, <span itemprop="addressLocality">г. Москва</span>
-              </div>
-              <div itemprop="streetAddress" class="rbk-footer__address-row">
-                2-й Хорошевский проезд, д.9/2, ВИКА-ЦЕНТР, офис 209
-              </div>
-              <div itemprop="telephone" class="rbk-footer__address-row">
-                тел.: <a href="tel:+74957956260">+7 495 795 62 60</a>
-              </div>
-              <div itemprop="email" class="rbk-footer__address-row">
-                e-mail: info@rbkstroyinvest.ru
-              </div>
-            </div>
-            <div class="rbk-contacts-page__address-map">
-              <div id="rbkYandexMap" style="width: 520px; height: 370px; max-width: 100%;"></div>
-            </div>
+      <form action="" class="rbk-search-page__form">
+        <div class="row">
+          <div class="col-xs-12 col-sm-10">
+            <input type="text" placeholder="Запрос" class="rbk-search-page__form-input rbk-input">
+          </div>
+          <div class="col-xs-12 col-sm-2 puzzle_ta_right">
+            <a href="javascript:void(0)" class="more-button more-button_size_m more-button_style_gray">
+              Искать
+            </a>
           </div>
         </div>
+        <div class="rbk-search-page__form-result-num">
+          Найдено: 23
+        </div>
+      </form>
+      <div class="rbk-search-page__result-list">
+        <div class="rbk-search-page__result-list-item">
+          <a href="javascript:void(0)" class="rbk-search-page__result-list-item-title">
+            Запрос
+          </a>
+          <div class="rbk-search-page__result-list-item-body">
+            ... 20-летний опыт в строительстве объектов в <strong>запрос</strong> странах Европы и СНГ. С 2011 г является директором по строительству и управляющим партнером компании DeRus-ALLIANZ Ирина Баранова Финансовый директор Ирина Баранова Федоров Алексей Руководитель проекта Образование: - ГБОУ СПО СПбТОТФиП в 2000 г Опыт: ...
+          </div>
+        </div>
+        <div class="rbk-search-page__result-list-item">
+          <a href="javascript:void(0)" class="rbk-search-page__result-list-item-title">
+            Запрос
+          </a>
+          <div class="rbk-search-page__result-list-item-body">
+            ... 20-летний опыт в строительстве объектов в <strong>запрос</strong> странах Европы и СНГ. С 2011 г является директором по строительству и управляющим партнером компании DeRus-ALLIANZ Ирина Баранова Финансовый директор Ирина Баранова Федоров Алексей Руководитель проекта Образование: - ГБОУ СПО СПбТОТФиП в 2000 г Опыт: ...
+          </div>
+        </div>
+        <div class="rbk-search-page__result-list-item">
+          <a href="javascript:void(0)" class="rbk-search-page__result-list-item-title">
+            Запрос
+          </a>
+          <div class="rbk-search-page__result-list-item-body">
+            ... 20-летний опыт в строительстве объектов в <strong>запрос</strong> странах Европы и СНГ. С 2011 г является директором по строительству и управляющим партнером компании DeRus-ALLIANZ Ирина Баранова Финансовый директор Ирина Баранова Федоров Алексей Руководитель проекта Образование: - ГБОУ СПО СПбТОТФиП в 2000 г Опыт: ...
+          </div>
+        </div>
+        <div class="rbk-search-page__result-list-item">
+          <a href="javascript:void(0)" class="rbk-search-page__result-list-item-title">
+            Запрос
+          </a>
+          <div class="rbk-search-page__result-list-item-body">
+            ... 20-летний опыт в строительстве объектов в <strong>запрос</strong> странах Европы и СНГ. С 2011 г является директором по строительству и управляющим партнером компании DeRus-ALLIANZ Ирина Баранова Финансовый директор Ирина Баранова Федоров Алексей Руководитель проекта Образование: - ГБОУ СПО СПбТОТФиП в 2000 г Опыт: ...
+          </div>
+        </div>
+        <div class="rbk-search-page__result-list-item">
+          <a href="javascript:void(0)" class="rbk-search-page__result-list-item-title">
+            Запрос
+          </a>
+          <div class="rbk-search-page__result-list-item-body">
+            ... 20-летний опыт в строительстве объектов в <strong>запрос</strong> странах Европы и СНГ. С 2011 г является директором по строительству и управляющим партнером компании DeRus-ALLIANZ Ирина Баранова Финансовый директор Ирина Баранова Федоров Алексей Руководитель проекта Образование: - ГБОУ СПО СПбТОТФиП в 2000 г Опыт: ...
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
@@ -335,32 +320,6 @@
 
 <!-- custom -->
 <script src="assets/js/script.js"></script>
-<script>
-// yandex map
-ymaps.ready(init);
-var myMap, 
-    myPlacemark;
-
-function init(){ 
-    myMap = new ymaps.Map("rbkYandexMap", {
-        center: [55.774107, 37.530885],
-        zoom: 13,
-        controls: ['zoomControl']
-    }); 
-
-    myPlacemark = new ymaps.Placemark(myMap.getCenter(), {
-      hintContent: 'РБК Строй Инвест',
-      balloonContent: '<b>РБК Строй Инвест</b> <br>г. Москва, 2-й Хорошевский проезд, д.9/2, ВИКА-ЦЕНТР, офис 209'
-    }, {
-      iconLayout: 'default#image',
-      iconImageHref: 'assets/img/tip.svg',
-      iconImageSize: [31, 39]
-    });
-    
-    myMap.geoObjects.add(myPlacemark);
-}
-
-</script>
 </body>
 </html>
 
