--- a/rbk/search.html
+++ b/rbk/search.html
@@ -98,7 +98,7 @@
                <a href="javascript:void(0)" class="rbk-header__menu-item">
                  Партнеры
                </a>
-               <a href="javascript:void(0)" class="rbk-header__menu-item">
+               <a href="contacts.html" class="rbk-header__menu-item">
                 Контакты 
               </a>
                <div class="rbk-header__menu-item is-search">
