--- a/rbk/contacts.html
+++ b/rbk/contacts.html
@@ -80,25 +80,25 @@
               </i>
             </div>
             <div class="rbk-header__menu-list">
-               <a href="javascript:void(0)" class="rbk-header__menu-item">
+               <a href="projects.html" class="rbk-header__menu-item">
                  Проекты
                </a>
-               <a href="javascript:void(0)" class="rbk-header__menu-item is-active">
+               <a href="about_company.html" class="rbk-header__menu-item">
                  О компании
                </a>
                <a href="news-item.html" class="rbk-header__menu-item">
                  Услуги
                </a>
-               <a href="javascript:void(0)" class="rbk-header__menu-item">
+               <a href="news.html" class="rbk-header__menu-item">
                  Новости
                </a>
-               <a href="javascript:void(0)" class="rbk-header__menu-item">
+               <a href="team.html" class="rbk-header__menu-item">
                  Команда
                </a>
-               <a href="javascript:void(0)" class="rbk-header__menu-item">
+               <a href="#partners" class="rbk-header__menu-item">
                  Партнеры
                </a>
-               <a href="javascript:void(0)" class="rbk-header__menu-item">
+               <a href="contacts.html" class="rbk-header__menu-item is-active">
                 Контакты 
               </a>
                <div class="rbk-header__menu-item is-search">
