--- a/rbk/news-item.html
+++ b/rbk/news-item.html
@@ -96,7 +96,7 @@
                <a href="#partners" class="rbk-header__menu-item">
                  Партнеры
                </a>
-               <a href="#contacts" class="rbk-header__menu-item">
+               <a href="contacts.html" class="rbk-header__menu-item">
                 Контакты 
               </a>
                <div class="rbk-header__menu-item is-search">
