--- a/sewinglab/index.html
+++ b/sewinglab/index.html
@@ -21,8 +21,8 @@
 	<!-- arcticModal theme -->
 	<link rel="stylesheet" href="assets/arcticmodal/themes/simple.css">
 	<!-- favicon -->
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="/sewinglab/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/sewinglab/favicon.ico" type="image/x-icon">
 	
 
 	<!-- Google Analitics -->
@@ -1204,7 +1204,7 @@
 
 	
 	<!-- jQuery -->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.9.1.min.js" integrity="sha256-wS9gmOZBqsqWxgIVgA8Y9WcQOa7PgSIX+rPA0VL2rbQ=" crossorigin="anonymous"></script>
 	<!-- sticky navbar -->
 	<script src="assets/stickyNavbar/jquery.easing.min.js"></script>
 	<script src="assets/stickyNavbar/jquery.stickyNavbar.min.js"></script>
